--- a/Restaurant/App.xaml
+++ b/Restaurant/App.xaml
@@ -2,8 +2,29 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Restaurant"
-             StartupUri="MainWindow.xaml">
+             StartupUri="LogInView.xaml">
     <Application.Resources>
-         
-    </Application.Resources>
+            <Style TargetType="TextBlock">
+                <Setter Property="FontSize" Value="17"/>
+                <Setter Property="Foreground" Value="White"/>
+            </Style>
+        <Style TargetType="TextBox">
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="TextAlignment" Value="Left"/>
+            <Setter Property="Padding" Value="5"/>
+        </Style>
+        <Style TargetType="PasswordBox">
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="HorizontalContentAlignment" Value="Left"/>
+            <Setter Property="Padding" Value="5"/>
+        </Style>
+        <Style TargetType="Button">
+                <Setter Property="Width" Value="100"/>
+                <Setter Property="Height" Value="30"/>
+            <Setter Property="Background" Value="#5D9C59"/>
+            </Style>
+            <Style TargetType="Label">
+                <Setter Property="FontSize" Value="14"/>
+            </Style>
+        </Application.Resources>
 </Application>
