--- a/Restaurant/LogInView.xaml
+++ b/Restaurant/LogInView.xaml
@@ -35,17 +35,13 @@
 
             <Label Grid.Column="0" Grid.Row="1" Content="{StaticResource LoginLabel}" VerticalAlignment="Center" HorizontalAlignment="Left" Grid.ColumnSpan="2" Margin="90,0,0,0"/>
             <Label Grid.Column="0" Grid.Row="2" Content="{StaticResource PasswordLabel}" VerticalAlignment="Center" HorizontalAlignment="Left" Grid.ColumnSpan="2" Margin="80,0,0,0"/>
-            <TextBox Grid.Column="1" Grid.Row="1" Width="200" VerticalAlignment="Center"/>
-            <PasswordBox Grid.Column="1" Grid.Row="2" Width="200" VerticalAlignment="Center"/>
+            <TextBox Name="loginTextBox" Grid.Column="1" Grid.Row="1" Width="200" VerticalAlignment="Center"/>
+            <PasswordBox Name="passwordBox" Grid.Column="1" Grid.Row="2" Width="200" VerticalAlignment="Center"/>
 
-            <Button Content="{StaticResource LoginButton}"  Grid.Column="1" Grid.Row="3" Width="156" HorizontalAlignment="Center" Height="40" VerticalAlignment="Center"/>
-            <TextBlock Grid.Column="0" Grid.Row="4" Text="{Binding CurrentKeyboardLayout}" />
-            <TextBlock Grid.Column="2" Grid.Row="4" Text="{Binding CapsLockPressed}" />
+            <Button Name="logInButton" Content="{StaticResource LoginButton}" Click="LogInButton_Click" FontSize="10" Grid.Column="1" Grid.Row="3" Width="156" HorizontalAlignment="Center" Height="40" VerticalAlignment="Center"/>
+            <TextBlock Grid.Column="0" Grid.Row="4" Name="languageText" FontSize="10" HorizontalAlignment="Left" Width="243" Grid.ColumnSpan="2" Margin="10,46,0,0"/>
+            <TextBlock Grid.Column="1" Grid.Row="4" Name="capsLockPressed" FontSize="10" HorizontalAlignment="Right" Grid.ColumnSpan="2" Margin="127,46,10,0" />
 
         </Grid>
-
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,0,0,10">
-            
-        </StackPanel>
     </Grid>
 </Window>
