change project structure and add mvvm

--- a/Restaurant/app/view/LogInView.xaml
+++ b/Restaurant/app/view/LogInView.xaml
@@ -12,7 +12,7 @@
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="RussianLocalization.xaml" />
+                <ResourceDictionary Source="../localization/RussianLocalization.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Window.Resources>
