--- a/Restaurant/app/view/App.xaml
+++ b/Restaurant/app/view/App.xaml
@@ -4,27 +4,45 @@
              xmlns:local="clr-namespace:Restaurant"
              StartupUri="LogInView.xaml">
     <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Light.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Primary/MaterialDesignColor.DeepPurple.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Accent/MaterialDesignColor.Lime.xaml" />
+            </ResourceDictionary.MergedDictionaries>
             <Style TargetType="TextBlock">
                 <Setter Property="FontSize" Value="17"/>
                 <Setter Property="Foreground" Value="White"/>
             </Style>
-        <Style TargetType="TextBox">
-            <Setter Property="VerticalContentAlignment" Value="Center"/>
-            <Setter Property="TextAlignment" Value="Left"/>
-            <Setter Property="Padding" Value="5"/>
-        </Style>
-        <Style TargetType="PasswordBox">
-            <Setter Property="VerticalContentAlignment" Value="Center"/>
-            <Setter Property="HorizontalContentAlignment" Value="Left"/>
-            <Setter Property="Padding" Value="5"/>
-        </Style>
-        <Style TargetType="Button">
+            <Style TargetType="TextBox">
+                <Setter Property="VerticalContentAlignment" Value="Center"/>
+                <Setter Property="TextAlignment" Value="Left"/>
+                <Setter Property="Padding" Value="5"/>
+            </Style>
+            <Style TargetType="PasswordBox">
+                <Setter Property="VerticalContentAlignment" Value="Center"/>
+                <Setter Property="HorizontalContentAlignment" Value="Left"/>
+                <Setter Property="Padding" Value="5"/>
+            </Style>
+            <Style TargetType="Button">
                 <Setter Property="Width" Value="100"/>
                 <Setter Property="Height" Value="30"/>
-            <Setter Property="Background" Value="#5D9C59"/>
+                <Setter Property="Background" Value="#5D9C59"/>
             </Style>
             <Style TargetType="Label">
                 <Setter Property="FontSize" Value="14"/>
             </Style>
-        </Application.Resources>
+            <Style x:Key="MenuItemStyle" TargetType="MenuItem">
+                <Setter Property="Height" Value="20"/>
+                <Setter Property="Foreground" Value="Black"/>
+                <Style.Triggers>
+                    <Trigger Property="IsMouseOver" Value="True">
+                        <Setter Property="IsSubmenuOpen" Value="True"/>
+                        <Setter Property="FocusManager.FocusedElement" Value="{Binding RelativeSource={RelativeSource Self}}" />
+                    </Trigger>
+                </Style.Triggers>
+            </Style>
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
