--- a/Restaurant/app/view/App.xaml
+++ b/Restaurant/app/view/App.xaml
@@ -5,29 +5,33 @@
              StartupUri="LogInView.xaml">
     <Application.Resources>
         <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
+            <!--<ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Light.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Primary/MaterialDesignColor.DeepPurple.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Accent/MaterialDesignColor.Lime.xaml" />
-            </ResourceDictionary.MergedDictionaries>
+            </ResourceDictionary.MergedDictionaries>-->
             <Style TargetType="TextBox">
                 <Setter Property="VerticalContentAlignment" Value="Center"/>
                 <Setter Property="TextAlignment" Value="Left"/>
                 <Setter Property="Padding" Value="5"/>
+                <Setter Property="FontSize" Value="14"/>
             </Style>
             <Style TargetType="PasswordBox">
                 <Setter Property="VerticalContentAlignment" Value="Center"/>
                 <Setter Property="HorizontalContentAlignment" Value="Left"/>
                 <Setter Property="Padding" Value="5"/>
+                <Setter Property="FontSize" Value="14"/>
             </Style>
             <Style TargetType="Button">
                 <Setter Property="Width" Value="100"/>
                 <Setter Property="Height" Value="30"/>
                 <Setter Property="Background" Value="#5D9C59"/>
+                <Setter Property="Foreground" Value="White"/>
+                <Setter Property="FontSize" Value="14"/>
             </Style>
             <Style TargetType="Label">
-                <Setter Property="FontSize" Value="14"/>
+                <Setter Property="FontSize" Value="16"/>
             </Style>
             <Style x:Key="MenuItemStyle" TargetType="MenuItem">
                 <Setter Property="Height" Value="20"/>
