--- a/Restaurant/app/view/MainWindow.xaml
+++ b/Restaurant/app/view/MainWindow.xaml
@@ -6,14 +6,38 @@
         xmlns:local="clr-namespace:Restaurant.app.view" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
+    <Grid Background="Black">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <Menu Grid.Row="0">
-            <MenuItem Header="Другое" Style="{StaticResource MenuItemStyle}">
+        <Menu Grid.Row="0" Background="Black" >
+            
+
+            <MenuItem Header="Меню" Foreground="White" Click="Dishes_Click" Style="{StaticResource MenuItemStyle}">
+                <MenuItem.Icon>
+                    <materialDesign:PackIcon Kind="Food"/>
+                </MenuItem.Icon>
+            </MenuItem>
+
+            <MenuItem Header="Склады" Foreground="White" Click="Warehouses_Click" Style="{StaticResource MenuItemStyle}">
+  
+            </MenuItem>
+
+            <MenuItem Foreground="White" Header="Поставки" Click="Supplies_Click" Style="{StaticResource MenuItemStyle}">
+            </MenuItem>
+
+            <MenuItem Header="Заявки" Foreground="White" Click="Supplies_Click" Style="{StaticResource MenuItemStyle}">
+        
+            </MenuItem>
+
+            <MenuItem Header="Реализация" Foreground="White" Click="Dishes_Click" Style="{StaticResource MenuItemStyle}">
+            </MenuItem>
+
+            
+            
+            <MenuItem Header="Другое" Foreground="White" Style="{StaticResource MenuItemStyle}">
                 <MenuItem Header="Настройки" Style="{StaticResource MenuItemStyle}">
                     <MenuItem.Icon>
                         <materialDesign:PackIcon Kind="Settings"/>
@@ -32,16 +56,7 @@
                     </MenuItem.Icon>
                 </MenuItem>
             </MenuItem>
-
-            <MenuItem Header="Блюда" Click="Dishes_Click" Style="{StaticResource MenuItemStyle}">
-                <MenuItem.Icon>
-                    <materialDesign:PackIcon Kind="Food"/>
-                </MenuItem.Icon>
-            </MenuItem>
-
-            <MenuItem Header="Создание поставки" Style="{StaticResource MenuItemStyle}"/>
-
-            <MenuItem Header="Помощь" Style="{StaticResource MenuItemStyle}">
+            <MenuItem Foreground="White" Header="Помощь" Style="{StaticResource MenuItemStyle}">
                 <MenuItem Header="Содержание" Style="{StaticResource MenuItemStyle}">
                     <MenuItem.Icon>
                         <materialDesign:PackIcon Kind="HelpCircleOutline"/>
