--- a/Restaurant/app/view/SuppliesPage.xaml
+++ b/Restaurant/app/view/SuppliesPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Restaurant.app.view.DishesPage"
+﻿<Page x:Class="Restaurant.app.view.SuppliesPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Dishes">
+      Title="SuppliesPage">
 
     <Grid Background="Black">
         <Grid.RowDefinitions>
@@ -29,12 +29,12 @@
         </StackPanel>
 
         <ScrollViewer  Grid.Row="1" VerticalScrollBarVisibility="Auto">
-            <DataGrid Background="Black" Name="dataGrid" SelectedItem="{Binding SelectedDish}" IsReadOnly="True" BorderBrush="LightGray" FontSize="15" ItemsSource="{Binding Dishes}" AutoGenerateColumns="False" Foreground="#000000">
+            <DataGrid Background="Black" Name="dataGrid" SelectedItem="{Binding SelectedSupply}" IsReadOnly="True" BorderBrush="LightGray" FontSize="15" ItemsSource="{Binding Supplies}" AutoGenerateColumns="False" Foreground="#000000">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Номер" Binding="{Binding DishID}" />
-                    <DataGridTextColumn Header="Название" Binding="{Binding DishName}" />
-                    <DataGridTextColumn Header="Цена" Binding="{Binding DishCost}" />
-                    <DataGridTextColumn Header="Комментарий" Binding="{Binding CookingTechnology}" />
+                    <DataGridTextColumn Header="Номер" Binding="{Binding SupplyID}" />
+                    <DataGridTextColumn Header="Поставщик" Binding="{Binding Supplier.SupplierName}" />
+                    <DataGridTextColumn Header="Дата" Binding="{Binding SupplyDate}" />
+                    <DataGridTextColumn Header="Цена" Binding="{Binding PurchasePrice}" />
                 </DataGrid.Columns>
             </DataGrid>
         </ScrollViewer>
