--- a/Restaurant/app/view/WarehousesPage.xaml
+++ b/Restaurant/app/view/WarehousesPage.xaml
@@ -1,12 +1,12 @@
-﻿<Page x:Class="Restaurant.app.view.DishesPage"
+﻿<Page x:Class="Restaurant.app.view.WarehousesPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+      xmlns:local="clr-namespace:Restaurant.app.view" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Dishes">
+      Title="WarehousesPage">
 
     <Grid Background="Black">
         <Grid.RowDefinitions>
@@ -29,12 +29,12 @@
         </StackPanel>
 
         <ScrollViewer  Grid.Row="1" VerticalScrollBarVisibility="Auto">
-            <DataGrid Background="Black" Name="dataGrid" SelectedItem="{Binding SelectedDish}" IsReadOnly="True" BorderBrush="LightGray" FontSize="15" ItemsSource="{Binding Dishes}" AutoGenerateColumns="False" Foreground="#000000">
+            <DataGrid Background="Black" Name="dataGrid" SelectedItem="{Binding SelectedWarehouse}" IsReadOnly="True" BorderBrush="LightGray" FontSize="15" ItemsSource="{Binding Warehouses}" AutoGenerateColumns="False" Foreground="#000000">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Номер" Binding="{Binding DishID}" />
-                    <DataGridTextColumn Header="Название" Binding="{Binding DishName}" />
-                    <DataGridTextColumn Header="Цена" Binding="{Binding DishCost}" />
-                    <DataGridTextColumn Header="Комментарий" Binding="{Binding CookingTechnology}" />
+                    <DataGridTextColumn Header="Номер" Binding="{Binding WarehouseID}" />
+                    <DataGridTextColumn Header="Продукт" Binding="{Binding Product.ProductName}" />
+                    <DataGridTextColumn Header="Остаток" Binding="{Binding StockBalance}" />
+                    <DataGridTextColumn Header="Поставщик" Binding="{Binding Supplier.SupplierName}" />
                 </DataGrid.Columns>
             </DataGrid>
         </ScrollViewer>
