--- a/Restaurant/app/view/EditDishInfoPage.xaml
+++ b/Restaurant/app/view/EditDishInfoPage.xaml
@@ -1,9 +1,9 @@
-﻿<Page x:Class="Restaurant.app.view.EditDishInfoPage"
+﻿<Page x:Class="Restaurant.EditDishInfoPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Restaurant.app.view" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+      xmlns:local="clr-namespace:Restaurant" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="EditDishInfoPage">
@@ -16,19 +16,19 @@
 
             <StackPanel Orientation="Vertical" Grid.Column="0">
                 <TextBlock Margin="10 5 10 0" Text="Название:" Foreground="White"/>
-                <TextBox Margin="10 5 10 0" Text="{Binding SelectedEduDocument.Number}" FontSize="15"  VerticalAlignment="Center"/>
+                <TextBox Margin="10 5 10 0" Text="{Binding Dish.DishName}" FontSize="15"  VerticalAlignment="Center"/>
 
                 <TextBlock Margin="10 5 10 0" Text="Категория: " Foreground="White" VerticalAlignment="Center"/>
-                <ComboBox x:Name="eduDocumentTypesComboBox" HorizontalAlignment="Stretch" Margin="10 0 10 5" FontSize="15" materialDesign:HintAssist.Hint="Выберите категорию продукта" IsEditable="True" ItemsSource="{Binding EduDocumentTypes, UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding SelectedEduDocumentType, UpdateSourceTrigger=PropertyChanged}" DisplayMemberPath="Name"/>
+                <ComboBox HorizontalAlignment="Stretch" Margin="10 0 10 5" FontSize="15" materialDesign:HintAssist.Hint="Выберите категорию продукта" IsEditable="True" ItemsSource="{Binding DishGroups, UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding SelectedDishGroup, UpdateSourceTrigger=PropertyChanged}" DisplayMemberPath="GroupName"/>
 
                 <TextBlock Margin="10 5 10 0" Text="Статус: " Foreground="White" VerticalAlignment="Center"/>
-                <ComboBox x:Name="eduInstitutionsComboBox" HorizontalAlignment="Stretch" Margin="10 0 10 5" FontSize="15" materialDesign:HintAssist.Hint="Введите название образовательной организации" IsEditable="True" ItemsSource="{Binding EduInstitutions, UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding SelectedEduInstitution, UpdateSourceTrigger=PropertyChanged}" DisplayMemberPath="Name"/>
+                <ComboBox HorizontalAlignment="Stretch" Margin="10 0 10 5" FontSize="15" materialDesign:HintAssist.Hint="Введите название образовательной организации" IsEditable="True" ItemsSource="{Binding Statuses, UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding SelectedStatus, UpdateSourceTrigger=PropertyChanged}" DisplayMemberPath="StatusName"/>
 
                 <TextBlock Margin="10 5 10 0" Text="Стоимость (руб.):" Foreground="White"/>
-                <TextBox Margin="10 5 10 0" Text="{Binding SelectedEduDocument.Series}" FontSize="15"  VerticalAlignment="Center"/>
+                <TextBox Margin="10 5 10 0" Text="{Binding Dish.DishCost}" FontSize="15"  VerticalAlignment="Center"/>
 
                 <TextBlock Margin="10 5 10 0" Text="Вес порции (гр.):" Foreground="White"/>
-                <TextBox Margin="10 5 10 0" Text="{Binding SelectedEduDocument.Number}" FontSize="15"  VerticalAlignment="Center"/>
+                <TextBox Margin="10 5 10 0" Text="{Binding Dish.OutputWeight}" FontSize="15"  VerticalAlignment="Center"/>
 
                 <StackPanel Grid.Row="8" Orientation="Horizontal" Margin="10 5" HorizontalAlignment="Center">
                     <Button Margin="5" Content="Удалить" Command="{Binding DeleteEduDocumentCommand}" BorderBrush="#FFB73A3A" Background="#FFB73A3A"/>
@@ -38,7 +38,7 @@
 
             <StackPanel Orientation="Vertical" Grid.Column="1">
                 <TextBlock Margin="10 5 10 0" Text="Технология приготовления" Foreground="White" TextAlignment="Center"/>
-                <TextBox Margin="10 5 10 0" Height="100" Text="{Binding SelectedEduDocument.Number}" FontSize="15" 
+                <TextBox Margin="10 5 10 0" Height="100" Text="{Binding Dish.CookingTechnology}" FontSize="15" 
                      VerticalAlignment="Center"
                      AcceptsReturn="True" TextWrapping="Wrap" MaxLines="6"/>
 
