add request pag, orders page, supplier info page.  Fix model, fix database

--- a/Restaurant/app/view/MainWindow.xaml
+++ b/Restaurant/app/view/MainWindow.xaml
@@ -28,11 +28,20 @@
             <MenuItem Foreground="White" Header="Поставки" Click="Supplies_Click" Style="{StaticResource MenuItemStyle}">
             </MenuItem>
 
-            <MenuItem Header="Заявки" Foreground="White" Click="Supplies_Click" Style="{StaticResource MenuItemStyle}">
-        
+            <MenuItem Header="Заявки" Foreground="White">
+                <MenuItem Header="Создать заявку" Style="{StaticResource MenuItemStyle}">
+                </MenuItem>
+
+                <MenuItem Header="Список заявок"  Click="Requests_Click" Style="{StaticResource MenuItemStyle}">
+                </MenuItem>
             </MenuItem>
 
-            <MenuItem Header="Реализация" Foreground="White" Click="Dishes_Click" Style="{StaticResource MenuItemStyle}">
+            <MenuItem Header="Реализация" Foreground="White" Style="{StaticResource MenuItemStyle}">
+                <MenuItem Header="Создать заказ" Style="{StaticResource MenuItemStyle}">
+                </MenuItem>
+
+                <MenuItem Header="Список заказов"  Click="Orders_Click" Style="{StaticResource MenuItemStyle}">
+                </MenuItem>
             </MenuItem>
 
             
