--- a/Restaurant/app/view/DishesPage.xaml
+++ b/Restaurant/app/view/DishesPage.xaml
@@ -29,7 +29,8 @@
         </StackPanel>
 
         <ScrollViewer  Grid.Row="1" VerticalScrollBarVisibility="Auto">
-            <DataGrid Background="Black" Name="dataGrid" SelectedItem="{Binding SelectedDish}" IsReadOnly="True" BorderBrush="LightGray" FontSize="15" ItemsSource="{Binding Dishes}" AutoGenerateColumns="False" Foreground="#000000">
+            <DataGrid Background="Black" Name="dataGrid" SelectedItem="{Binding SelectedDish}" IsReadOnly="True" BorderBrush="LightGray" FontSize="15" 
+                      ItemsSource="{Binding Dishes}" AutoGenerateColumns="False" Foreground="#000000">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Номер" Binding="{Binding DishID}" />
                     <DataGridTextColumn Header="Название" Binding="{Binding DishName}" />
