--- a/Restaurant/app/view/SuppliesPage.xaml
+++ b/Restaurant/app/view/SuppliesPage.xaml
@@ -26,6 +26,9 @@
             <Button Width="32" Height="32" Margin="2 5" Command="{Binding ReloadCommand, UpdateSourceTrigger=PropertyChanged}" Padding="0,0,0,0">
                 <materialDesign:PackIcon Kind="Reload" Width="24" Height="24" />
             </Button>
+            <Button Content="Смотреть информацию о поставщике"  Width="260" Height="32" Margin="2 5" Command="{Binding OpenSupplierInfoCommand, UpdateSourceTrigger=PropertyChanged}" Padding="0,0,0,0">
+                
+            </Button>
         </StackPanel>
 
         <ScrollViewer  Grid.Row="1" VerticalScrollBarVisibility="Auto">
