--- a/Restaurant/app/view/WarehousesPage.xaml
+++ b/Restaurant/app/view/WarehousesPage.xaml
@@ -26,10 +26,13 @@
             <Button Width="32" Height="32" Margin="2 5" Command="{Binding ReloadCommand, UpdateSourceTrigger=PropertyChanged}" Padding="0,0,0,0">
                 <materialDesign:PackIcon Kind="Reload" Width="24" Height="24" />
             </Button>
+            <Button Content="Смотреть информацию о поставщике"  Width="260" Height="32" Margin="2 5" Command="{Binding OpenSupplierInfoCommand, UpdateSourceTrigger=PropertyChanged}" Padding="0,0,0,0">
+
+            </Button>
         </StackPanel>
 
         <ScrollViewer  Grid.Row="1" VerticalScrollBarVisibility="Auto">
-            <DataGrid Background="Black" Name="dataGrid" SelectedItem="{Binding SelectedWarehouse}" IsReadOnly="True" BorderBrush="LightGray" FontSize="15" ItemsSource="{Binding Warehouses}" AutoGenerateColumns="False" Foreground="#000000">
+            <DataGrid SelectionChanged="DataGrid_SelectionChanged" Background="Black" Name="dataGrid" SelectedItem="{Binding SelectedWarehouse}" IsReadOnly="True" BorderBrush="LightGray" FontSize="15" ItemsSource="{Binding Warehouses}" AutoGenerateColumns="False" Foreground="#000000">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Номер" Binding="{Binding WarehouseID}" />
                     <DataGridTextColumn Header="Продукт" Binding="{Binding Product.ProductName}" />
