--- a/Restaurant/app/view/WarehousesPage.xaml
+++ b/Restaurant/app/view/WarehousesPage.xaml
@@ -15,13 +15,6 @@
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Left">
-            <Button Width="32" Height="32" Margin="2 5" Command="{Binding AddNewDishCommand}" VerticalAlignment="Center" Padding="0,0,0,0">
-                <materialDesign:PackIcon Kind="Add" Width="24" Height="24" />
-            </Button>
-
-            <Button Width="32" Height="32" Margin="2 5" Command="{Binding OpenDishInfoCommand, UpdateSourceTrigger=PropertyChanged}" Padding="0,0,0,0">
-                <materialDesign:PackIcon Kind="Edit" Width="24" Height="24" />
-            </Button>
 
             <Button Width="32" Height="32" Margin="2 5" Command="{Binding ReloadCommand, UpdateSourceTrigger=PropertyChanged}" Padding="0,0,0,0">
                 <materialDesign:PackIcon Kind="Reload" Width="24" Height="24" />
@@ -33,7 +26,9 @@
         </StackPanel>
 
         <ScrollViewer  Grid.Row="1" VerticalScrollBarVisibility="Auto">
-            <DataGrid SelectionChanged="DataGrid_SelectionChanged" Background="Black" Name="dataGrid" SelectedItem="{Binding SelectedWarehouse}" IsReadOnly="True" BorderBrush="LightGray" FontSize="15" ItemsSource="{Binding Warehouses}" AutoGenerateColumns="False" Foreground="#000000">
+            <DataGrid SelectedItem="{Binding SelectedSupplier}" Background="Black" 
+                      Name="dataGrid" IsReadOnly="True" BorderBrush="LightGray" 
+                      FontSize="15" ItemsSource="{Binding Warehouses}" AutoGenerateColumns="False" Foreground="#000000">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Номер" Binding="{Binding WarehouseID}" />
                     <DataGridTextColumn Header="Продукт" Binding="{Binding Product.ProductName}" />
