--- a/Restaurant/app/view/WarehousesPage.xaml
+++ b/Restaurant/app/view/WarehousesPage.xaml
@@ -26,7 +26,7 @@
         </StackPanel>
 
         <ScrollViewer  Grid.Row="1" VerticalScrollBarVisibility="Auto">
-            <DataGrid SelectedItem="{Binding SelectedSupplier}" Background="Black" 
+            <DataGrid SelectedItem="{Binding SelectedWarehouse}" Background="Black" 
                       Name="dataGrid" IsReadOnly="True" BorderBrush="LightGray" 
                       FontSize="15" ItemsSource="{Binding Warehouses}" AutoGenerateColumns="False" Foreground="#000000">
                 <DataGrid.Columns>
