fix edit dish page

--- a/Restaurant/app/view/DishesPage.xaml
+++ b/Restaurant/app/view/DishesPage.xaml
@@ -16,9 +16,9 @@
 
         <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Left" Width="224">
             
-            <Button Width="32" Height="32" Margin="2 5" Command="{Binding AddNewDishCommand}" VerticalAlignment="Center" Padding="0,0,0,0">
+            <!--<Button Width="32" Height="32" Margin="2 5" Command="{Binding AddNewDishCommand}" VerticalAlignment="Center" Padding="0,0,0,0">
                 <materialDesign:PackIcon Kind="Add" Width="24" Height="24" />
-            </Button>
+            </Button>-->
 
             <Button Width="32" Height="32" Margin="2 5" 
                     Command="{Binding OpenDishInfoCommand, UpdateSourceTrigger=PropertyChanged}" 
