--- a/Restaurant/app/view/EditDishInfoPage.xaml
+++ b/Restaurant/app/view/EditDishInfoPage.xaml
@@ -34,7 +34,7 @@
                 <TextBox Margin="10 5 10 0" Text="{Binding Dish.OutputWeight}" FontSize="15"  VerticalAlignment="Center"/>
 
                 <StackPanel Grid.Row="8" Orientation="Horizontal" Margin="10 5" HorizontalAlignment="Center">
-                    <Button Margin="5" Content="Удалить" Command="{Binding DeleteCommand}" BorderBrush="#FFB73A3A" Background="#FFB73A3A"/>
+                    <!--<Button Margin="5" Content="Удалить" Command="{Binding DeleteCommand}" BorderBrush="#FFB73A3A" Background="#FFB73A3A"/>-->
                     <Button Margin="5" Content="Сохранить" Command="{Binding SaveCommand}"/>
                 </StackPanel>
             </StackPanel>
@@ -51,6 +51,11 @@
                             Width="24" Height="24" Margin="5 2" Padding="0,0,0,0" VerticalAlignment="Top">
                         <materialDesign:PackIcon Kind="Add" Width="24" Height="24" 
                                                  HorizontalAlignment="Center" VerticalAlignment="Center" />
+                    </Button>
+                    <Button Grid.Row="0" Command="{Binding DeleteDishCommand}" 
+                            Width="24" Height="24" Margin="5 2" BorderBrush="#FFB73A3A" Background="#FFB73A3A" Padding="0,0,0,0" VerticalAlignment="Top">
+                        <materialDesign:PackIcon Kind="Delete" Width="24" Height="24" 
+                                                HorizontalAlignment="Center" VerticalAlignment="Center" />
                     </Button>
                     <ComboBox Margin="10 0 10 5" FontSize="15" materialDesign:HintAssist.Hint="Поиск" IsEditable="True" 
                               ItemsSource="{Binding Products, UpdateSourceTrigger=PropertyChanged}" 
